Replaced use of Sun BASE64Decoder with one from Christian d'Heureuse, and wrote a unit test for DataUriResolver which tests only that content matches (doesn't yet test format tag or anything).